# django-docker-development

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  run.sh
requirements/: development.txt
web/: urls.py  wsgi.py
web/api/: urls.py  views.py
web/requirements/: development.txt
web/run/: secret_key.py
web/settings/: common.py  development.py
web/tests/: test_web.py
web/tests/api/: test_django_sample_api.py  test_sample_api.py
