[tool.poetry]
name = "django-docker-development"
version = "0.1.0"
description = ""
authors = ["Arag Entum <aragentum@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^2.2.13"
djangorestframework = "^3.10.3"
psycopg2-binary = "^2.8.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-django = "^3.9.0"
black = { version = "^19.10b0", python = ">=3.6" }

[tool.black]
line-length = 120
target-version = ['py37', 'py38']
include = '\web\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # specific
  | web/settings
)/
'''

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
